tests/snapshots/assets__check_file@unit-code-if-chain.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/if-chain.typ
snapshot_kind: text
---
#if a < b { true } else if c < d { (false,) } else if 1 + 2 == 3 {
  (true, false)
} else { none }

#if a < b { true } else if c < d [ false ] else if 1 + 2 == 3 [*strong*] else {
  none
}

#if a < b { true } else if c < d [
  false ] else if 1 + 2 == 3 [*strong*] else {
  none
}

#if a < b {
  true
} else if c < d [ false ] else if 1 + 2 == 3 [
  *strong*] else { none }

#{
  if a < b { true } else if c < d { (false,) } else if 1 + 2 == 3 {
    (true, false)
  } else { none }

  if a < b { true } else if c < d [ false ] else if 1 + 2 == 3 [*strong*] else {
    none
  }

  if a < b { true } else if c < d [
    false ] else if 1 + 2 == 3 [*strong*] else {
    none
  }

  if a < b {
    true
  } else if c < d [ false ] else if 1 + 2 == 3 [
    *strong*] else { none }

}

#if a < b {
  true
  false
} else if c < d [ false ] else if 1 + 2 == 3 [*strong*] else {
  a = 3
  none
}

#if a < b {
  true
  false
} else if c < d [
  false ] else if 1 + 2 == 3 [*strong*] else if false {
  if 0 < 1 { true }
} else {
  a = 3
  if 3 > 2 { for i in range(10) { i } }
  none
}
