tests/snapshots/assets__check_file@unit-code-if-while-else.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/if-while-else.typ
snapshot_kind: text
---
#if (
  if true { }
    == while false { }
) {
  true
} else { }
