tests/snapshots/assets__check_file@unit-code-if-while-else.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/if-while-else.typ
snapshot_kind: text
---
#if if true { } == while false { } {
  true
} else { }
