tests/snapshots/assets__check_file@unit-code-import-items.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/import-items.typ
---
#import "test.typ": aaa, bbb as cccccccccc, ddd as eeeeeeeeeee, fff as g, hhh as iiii, jjj as k, lll as m, nnn as o, ppp as q, rrr as s, ttt as u, vvv as w, xxx as y, zzz as aa, bbb as cc, ddd as ee, fff as gg, hhh as ii, jjj as kk, lll as mm, nnn as oo, ppp as qq, rrr as ss, ttt as uu, vvv as ww, xxx as yy, zzz as aaa, bbb as ccc, ddd as eee, fff as ggg, hhh as iii, jjj as k
