tests/snapshots/assets__check_file@unit-code-include.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/include.typ
---
#include "cond.typ"
#import "cond.typ"
#import "cond.typ" as test
#import "cond.typ": a as c, b as d
