tests/snapshots/assets__check_file@unit-code-let-closure.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/let-closure.typ
---
#let f(
  long-arg-1,
) = {
  // comment
  let x = 1111111111111111111111111111111111111111111111111111111111111111111111111111111
}
