tests/snapshots/assets__check_file@unit-code-multiline-string.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/multiline-string.typ
snapshot_kind: text
---
#{
  assert(
    true,
    message: "Target
              qubit for multi qubit gate does not exist aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  )
}

#{
  assert(
    true,
    message: "Target
              qubit for multi qubit
     gate does not exist aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
                  aaaaaaaaaaaaaaaa


c",
  )
}
